--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "1.1.0"
   },
   "dependencies": {
+    "firebase": "^4.9.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
